Revision history for Mojolicious-Plugin-AssetPack

0.46
       * Remove "fallback" attribute #44
       * Remove "process" method

0.45     Tue Mar 31 22:02:06 2015
       * Can also fetch remote assets from local $app #30
       * Will calculate MD5 sum recursively for sass/scss #44
       * Add Cookbook

0.44     Mon Mar 23 13:00:45 2015
       * Add ".min.ext" to minified asset filename
       * Change filename for assets with errors from "-with-error.ext" to ".err.ext"
       * Will look for existing assets even with MOJO_ASSETPACK_DEBUG=1
       * Remove errmsg() from Mojolicious::Plugin::AssetPack::Preprocessor
       * Remove detect() from Mojolicious::Plugin::AssetPack::Preprocessors

0.43     Fri Mar 20 11:27:22 2015
       * Same CSS::Sass detection for Sass as for Scss preprocessor

0.42     Mon Mar 16 19:31:36 2015
       * Fix "Unescaped left brace in regex is deprecated" warnings

0.41     Mon Mar 16 13:47:17 2015
       * Will die on CSS::Sass errors

0.40     Mon Mar 16 11:04:47 2015
       * Fix reading sass files from SASS_PATH, when using CSS::Sass

0.39     Fri Mar  6 17:06:19 2015
       * Will default to CSS::Sass if installed
       * Reversed production/development logic
       * Fix spelling in documentation (berov)

0.3801   Mon Mar  2 23:58:21 2015
       * Removed reference to "expand" #38

0.38     Mon Mar  2 23:55:36 2015
       * Improved documentation.
       * Less logging

0.37     Wed Feb  4 16:59:36 2015
       * Will use CSS::Sass if ENABLE_LIBSASS_BINDINGS=1 is set
         This is candiate to become the default in later releases

0.36     Fri Jan 30 12:08:51 2015
       * Require JavaScript::Minifier::XS 0.11 which include many bugfixes,
         such as:
         JavaScript::Minifier::XS::minify(q|function(s){return /^\s*[\w-"']+ *:/.test(s)}|);

0.35     Thu Jan 29 21:20:25 2015
       * Include original error message when failing to fallback
       * Will die() instead of return $err on process()