@@ -3,6 +3,7 @@ Revision history for Mojolicious-Plugin-AssetPack
 0.46
        * Remove "fallback" attribute #44
        * Remove "process" method
+       * Will prevent AssetPack from registering twice
 
 0.45     Tue Mar 31 22:02:06 2015
        * Can also fetch remote assets from local $app #30
